# swagger_output.json
@@ -94,39 +94,22 @@
         "description": "",
         "parameters": [
           {
+            "name": "message",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "catid",
+            "in": "query",
+            "type": "string"
+          },
+          {
             "name": "body",
             "in": "body",
             "schema": {
               "type": "object",
               "properties": {
-                "name": {
-                  "example": "any"
-                },
-                "published": {
-                  "example": "any"
-                },
-                "sex": {
-                  "example": "any"
-                },
-                "breed": {
-                  "example": "any"
-                },
-                "DOB": {
-                  "example": "any"
-                },
-                "microchip": {
-                  "example": "any"
-                },
-                "centre": {
-                  "example": "any"
-                },
-                "status": {
-                  "example": "any"
-                },
-                "image": {
-                  "example": "any"
-                },
-                "remark": {
+                "message": {
                   "example": "any"
                 }
               }
@@ -136,9 +119,6 @@
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
@@ -154,18 +134,6 @@
             "type": "string"
           }
         ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      },
-      "delete": {
-        "description": "",
-        "parameters": [],
         "responses": {
           "200": {
             "description": "OK"
@@ -216,12 +184,32 @@
         }
       }
     },
-    "/favourite": {
+    "/CatsListfavourites": {
       "get": {
         "description": "",
         "parameters": [
           {
-            "name": "favourite",
+            "name": "list",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/favouritesAll": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "breed",
             "in": "query",
             "type": "string"
           }
@@ -251,25 +239,6 @@
       }
     },
     "/{id}": {
-      "get": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      },
       "put": {
         "description": "",
         "parameters": [
@@ -278,6 +247,23 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "message",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
